--- a/DbModel/DbModel.csproj
+++ b/DbModel/DbModel.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Box.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Point.cs" />
+    <Compile Include="PointType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util.cs" />
   </ItemGroup>
