用自定义Attribute实现保存Point的目的

--- a/DbModel/DbModel.csproj
+++ b/DbModel/DbModel.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="Box.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="CustomTypeAttribute.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="PointType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
