--- a/DbModel/DbModel.csproj
+++ b/DbModel/DbModel.csproj
@@ -58,11 +58,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Box.cs" />
-    <Compile Include="Class1.cs" />
-    <Compile Include="CustomTypeAttribute.cs" />
+    <Compile Include="RectangularTorus.cs" />
+    <Compile Include="CircularTorus.cs" />
+    <Compile Include="Cone.cs" />
+    <Compile Include="Cylinder.cs" />
+    <Compile Include="PointAttribute.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="PointType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Snout.cs" />
     <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
