修正Cylinder的定位及方向

--- a/ExportModel/ExportModel.csproj
+++ b/ExportModel/ExportModel.csproj
@@ -72,6 +72,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AxisDir.cs" />
     <Compile Include="EvalDirection.cs" />
     <Compile Include="Experssion.cs" />
     <Compile Include="ExportData.cs" />
