--- a/osgviewerMFC/osgviewerMFC.vcxproj.filters
+++ b/osgviewerMFC/osgviewerMFC.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GeometryUtility.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ChildFrm.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="stdafx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GeometryUtility.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
