--- a/ExportModel/ExportModel.csproj
+++ b/ExportModel/ExportModel.csproj
@@ -47,6 +47,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>D:\AVEVA\plant\PDMS12.0.SP6\Aveva.Pdms.Geometry.dll</HintPath>
     </Reference>
+    <Reference Include="Aveva.Pdms.Maths.Geometry, Version=12.0.0.0, Culture=neutral, PublicKeyToken=17c64733a9775004, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>D:\AVEVA\plant\PDMS12.0.SP6\Aveva.Pdms.Maths.Geometry.dll</HintPath>
+    </Reference>
     <Reference Include="Aveva.Pdms.Shared, Version=12.0.0.0, Culture=neutral, PublicKeyToken=17c64733a9775004, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>D:\AVEVA\plant\PDMS12.0.SP6\Aveva.Pdms.Shared.dll</HintPath>
