添加dish，椭圆验证通过，球还没遇到例子

--- a/DbModel/DbModel.csproj
+++ b/DbModel/DbModel.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Box.cs" />
+    <Compile Include="Dish.cs" />
     <Compile Include="RectangularTorus.cs" />
     <Compile Include="CircularTorus.cs" />
     <Compile Include="Cone.cs" />
