--- a/ExportModel/ExportModel.csproj
+++ b/ExportModel/ExportModel.csproj
@@ -47,6 +47,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>D:\AVEVA\plant\PDMS12.0.SP6\Aveva.Pdms.Geometry.dll</HintPath>
     </Reference>
+    <Reference Include="Aveva.Pdms.Geometry.Implementation, Version=12.0.6.0, Culture=neutral, PublicKeyToken=17c64733a9775004, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>D:\AVEVA\plant\PDMS12.0.SP6\Aveva.Pdms.Geometry.Implementation.dll</HintPath>
+    </Reference>
     <Reference Include="Aveva.Pdms.Maths.Geometry, Version=12.0.0.0, Culture=neutral, PublicKeyToken=17c64733a9775004, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>D:\AVEVA\plant\PDMS12.0.SP6\Aveva.Pdms.Maths.Geometry.dll</HintPath>
@@ -83,6 +87,7 @@
     <Compile Include="ExportModelAddin.cs" />
     <Compile Include="ExportModelCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="GeometryUtility.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ExportModel.uic" />
