添加颜色的处理

--- a/osgviewerMFC/osgviewerMFC.vcxproj
+++ b/osgviewerMFC/osgviewerMFC.vcxproj
@@ -190,6 +190,7 @@
       <HintPath>..\packages\NHibernate.3.3.3.4001\lib\Net35\NHibernate.dll</HintPath>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
