--- a/osgviewerMFC/osgviewerMFC.vcxproj
+++ b/osgviewerMFC/osgviewerMFC.vcxproj
@@ -137,7 +137,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <PrecompiledHeader>Create</PrecompiledHeader>
+      <PrecompiledHeader>Use</PrecompiledHeader>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -150,8 +150,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>e:\OpenSourceCode\OpenSceneGraph\build\lib\;e:\OpenSourceCode\OpenCasCade\source\ros\build\out\lib\RelWithDebInfo\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>OpenThreadsrd.lib;osgDBrd.lib;osgGArd.lib;osgrd.lib;osgTextrd.lib;osgUtilrd.lib;osgViewerrd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>e:\OpenSourceCode\OpenSceneGraph\build\lib\;e:\OpenSourceCode\OpenCasCade\source\ros\win64\vc12\lib\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>OpenThreadsrd.lib;osgDBrd.lib;osgGArd.lib;osgrd.lib;osgTextrd.lib;osgUtilrd.lib;osgViewerrd.lib;TKernel.lib;TKMath.lib;TKBrep.lib;TKMesh.lib;TKTopAlgo.lib;TKPrim.lib;TKOffset.lib;TKG3d.lib;TKGeomBase.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -175,6 +175,7 @@
     <ClCompile Include="MFC_OSG_MDIView.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
