--- a/osgviewerMFC/osgviewerMFC.vcxproj
+++ b/osgviewerMFC/osgviewerMFC.vcxproj
@@ -105,7 +105,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_WINDOWS;WNT;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>e:\OpenSourceCode\OpenSceneGraph\source\OpenSceneGraph-3.3.1\include\;e:\OpenSourceCode\OpenSceneGraph\build\include\;e:\OpenSourceCode\OpenCasCade\source\ros\inc\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>e:\OpenSourceCode\OpenSceneGraph\source\OpenSceneGraph-3.3.1\include\;e:\OpenSourceCode\OpenSceneGraph\build\include\;e:\OpenSourceCode\OpenCasCade\source\ros\inc\;..\GeometryLib\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <DisableSpecificWarnings>4996;%(DisableSpecificWarnings)</DisableSpecificWarnings>
     </ClCompile>
@@ -143,7 +143,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;WNT;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>e:\OpenSourceCode\OpenSceneGraph\source\OpenSceneGraph-3.3.1\include\;e:\OpenSourceCode\OpenSceneGraph\build\include\;e:\OpenSourceCode\OpenCasCade\source\ros\inc\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>e:\OpenSourceCode\OpenSceneGraph\source\OpenSceneGraph-3.3.1\include\;e:\OpenSourceCode\OpenSceneGraph\build\include\;e:\OpenSourceCode\OpenCasCade\source\ros\inc\;..\GeometryLib\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -184,6 +184,9 @@
   <ItemGroup>
     <ProjectReference Include="..\DbModel\DbModel.csproj">
       <Project>{59c95a5b-acb6-4cd1-bdbc-e53b7aee3be3}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\GeometryLib\GeometryLib.vcxproj">
+      <Project>{d5470c15-a5f6-4adf-949f-05ac9adea7ac}</Project>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
