可以实现导出PDSOFT模型

--- a/DbModel/DbModel.csproj
+++ b/DbModel/DbModel.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Box.cs" />
+    <Compile Include="Prism.cs" />
     <Compile Include="Dish.cs" />
     <Compile Include="Pyramid.cs" />
     <Compile Include="RectangularTorus.cs" />
