--- a/PDSOFTExport/PDSOFTExport.vcxproj.filters
+++ b/PDSOFTExport/PDSOFTExport.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClInclude Include="pdgeom\FilerCallBack.h">
       <Filter>pdgeom</Filter>
     </ClInclude>
+    <ClInclude Include="TestModel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -175,6 +178,9 @@
     </ClCompile>
     <ClCompile Include="pdgeom\FilerCallBack.cpp">
       <Filter>pdgeom</Filter>
+    </ClCompile>
+    <ClCompile Include="TestModel.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
