--- a/DbModel/DbModel.csproj
+++ b/DbModel/DbModel.csproj
@@ -63,6 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ellipsoid.cs" />
     <Compile Include="Sphere.cs" />
     <Compile Include="Wedge.cs" />
     <Compile Include="Box.cs" />
