1.添加SCYLINDER 2.解决颜色错误的问题

--- a/DbModel/DbModel.csproj
+++ b/DbModel/DbModel.csproj
@@ -63,6 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SCylinder.cs" />
     <Compile Include="Ellipsoid.cs" />
     <Compile Include="Sphere.cs" />
     <Compile Include="Wedge.cs" />
